# farfisa

./: Cargo.toml
src/: main.rs
src/controller/: gpio.rs  keyboard.rs  mod.rs
src/music/: mod.rs
src/synth/: fluid.rs  mod.rs
